# FancyRAG

./: .dockerignore  .env.example  .gitignore  .sed-tmp  AGENTS.md  Dockerfile  Makefile  README.md  TESTING_SUMMARY.md  docker-compose.neo4j-qdrant.yml  docker-compose.smoke.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  sample.txt
.ai/: debug-log.md
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: container-scan.yml  fulltext-index-smoke.yml  local-stack-smoke.yml  openai-allowlist-audit.yml  openai-probe-smoke.yml
docs/: architecture.md  brownfield-architecture.md  codebase-evaluation.md  prd.md
docs/alerts/: openai-telemetry.yml
docs/architecture/: coding-standards.md  overview.md  source-tree.md  tech-stack.md
docs/bmad/: story-overrides.md
pipelines/: kg_ingest.yaml
queries/: hybrid_retrieval.cypher
scripts/: __init__.py  ask_qdrant.py  audit_openai_allowlist.py  bootstrap.sh  check_docs.py  check_local_stack.sh  create_fulltext_index.py  create_vector_index.py  export_to_qdrant.py  kg_build.py  prepare_local_stack_env.py  run_local_stack_smoke.sh  service.py  wait_for_bolt.py
servers/: __init__.py  mcp_hybrid_google.py
src/: __init__.py
tests/: README.md  conftest.py  generate_tests.bats  test_compose_manifests.py  test_config.py  test_embeddings.py  test_logging_setup.py  test_queries.py
tools/: discover_classes.py  run_pipeline.py
(+335 files in other folders)
